# rviz_record

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/: record_panel.hpp  record_panel_bad.hpp  record_panel_old.hpp  record_panel_old2.hpp
src/: record_panel.cpp
srv/: StartRecording.srv  StopRecording.srv
